Fix sidebar width on mobile.

--- a/client-src/sass/theme.scss
+++ b/client-src/sass/theme.scss
@@ -75,6 +75,7 @@
 
   --sidebar-space: 410px;
   --sidebar-width: 400px;
+  --sidebar-max-width: 96vw;
   --sidebar-bg: white;
   --sidebar-border: 2px solid hsl(0, 0%, 85%);
   --sidebar-radius: var(--large-border-radius);
